fixed syntax issue with sumfetch

--- a/config.json
+++ b/config.json
@@ -25,6 +25,11 @@
     "CSS",
     "Terminal"
   ],
+  "next_up": [
+    "GDScript",
+    "TypeScript",
+    "Rust"
+  ],
   "hobbies": [
     "Coding",
     "Gaming",
