changed cool stuff.

--- a/config.json
+++ b/config.json
@@ -15,20 +15,20 @@
     "ko-fi": "https://ko-fi.com/fernd3v"
   },
   "currently": "Studying full-stack web development with a special interest in the terminal.",
-  "description": "I'm Rhyn Hilt (fern_d3v), a new developer currently exploring full-stack web,\ngame, and CLI tool development.\nI'm driven by a passion for problem-solving and love creating things that are\nboth functional and joyful.\nOutside of coding, I'm an avid fantasy reader, Souls-like gamer, and TTRPG enthusiast.\nI'm always open to connecting with fellow creators and problem-solvers.",
+  "description": "I'm Rhyn Hilt (fern_d3v), a new developer currently exploring full-stack web,game, and CLI tool development. I'm driven by a passion for problem-solving and love creating things that are both functional and joyful. Outside of coding, I'm an avid fantasy reader, Souls-like gamer, and TTRPG enthusiast. I'm always open to connecting with fellow creators and problem-solvers.",
   "fun_fact": "I lived in Turkey for a month when I was 19. I still remember a few words in Turkish.",
   "skills": [
-    "JavaScript",
-    "Node.js",
-    "Git",
-    "HTML",
-    "CSS",
-    "Terminal"
+    "JavaScript",
+    "Node.js",
+    "Git",
+    "HTML",
+    "CSS",
+    "Terminal"
   ],
   "next_up": [
-    "GDScript",
-    "TypeScript",
-    "Rust"
+    "GDScript",
+    "TypeScript",
+    "Rust"
   ],
   "hobbies": [
     "Coding",
