feat: update config and add BlockCursorInput component
- Updated config.json with new settings
- Added DepartureMonoNerdFontMono-Regular.otf font to assets
- Created BlockCursorInput.tsx component
- Improved Ps1.tsx and input.tsx components
- Updated global styles in global.css

--- a/config.json
+++ b/config.json
@@ -34,9 +34,9 @@
     "Coding",
     "Gaming",
     "Reading",
-    "Traveling",
+    "Cooking",
     "Music",
-    "Photography"
+    "TTRPGs"
   ],
   "colors": {
       "light": {
@@ -50,7 +50,7 @@
       },
        "dark": {
       "background": "#282a36",
-      "foreground": "#999999",
+      "foreground": "#f5f5f5",
       "yellow": "#FFFBB8",
       "green": "#91CA91",
       "gray": "#C3B1E1",
